Homepage is done

--- a/applications.html
+++ b/applications.html
@@ -6,10 +6,68 @@
   <title>Miscellaneous</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="./css/index.css" />
+  <script src="js/index.js"></script>
 </head>
 
 <body>
+  <!-- Navigation/topbar -->
+  <header>
+    <!-- Home button -->
+    <button
+      id="homeButton"
+      onmouseover="buttonHover('homeButton', 'homeButtonImage')"
+      onmouseout="buttonUnhover('homeButton', 'homeButtonImage')"
+      onclick="window.location.href='./index.html'"
+    >
+      <img src="./img/Home.png" id="homeButtonImage" />
+    </button>
+
+    <!-- Title/Header -->
+    <h1 id="title">HTML/CSS/JS Applications</h1>
+
+    <!-- Dropdown container -->
+    <div id="dropdown">
+      <button
+        id="dropdownButton"
+        onmouseover="buttonHover('dropdownButton', 'dropdownButtonImage')"
+        onmouseout="buttonUnhover('dropdownButton', 'dropdownButtonImage')"
+        onclick="toggleDropdown()"
+      >
+        <img src="./img/Dropdown.png" id="dropdownButtonImage" />
+      </button>
+
+      <ul id="dropdownList">
+        <li
+          onmouseover="buttonHover('homeLi')"
+          onmouseout="buttonUnhover('homeLi')"
+          onclick="window.location.href = './index.html'"
+          id="homeLi"
+        >Home</li>
+        <li
+          onmouseover="buttonHover('lessonsLi')"
+          onmouseout="buttonUnhover('lessonsLi')"
+          onclick="window.location.href = './lessons.html'"
+          id="lessonsLi"
+        >Lessons</li>
+        <li
+          onmouseover="buttonHover('historyLi')"
+          onmouseout="buttonUnhover('historyLi')"
+          onclick="window.location.href = './history.html'"
+          id="historyLi"
+        >History</li>
+        <li
+          onmouseover="buttonHover('applicationsLi')"
+          onmouseout="buttonUnhover('applicationsLi')"
+          onclick="window.location.href = './applications.html'"
+          id="applicationsLi"
+        >Examples &#38; Guidance</li>
+      </ul>
+    </div>
+  </header>
+
+  <main>
+  </main>
 </body>
 
 </html>
