--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
   <link rel="stylesheet" href="./css/index.css" />
-  <script src="js/index.js"></script>
+  <script src="./js/index.js"></script>
 </head>
 
 <body>
-  <!-- Navigation bar -->
-  <nav>
+  <!-- Navigation/topbar -->
+  <header>
     <!-- Home button -->
     <button
       id="homeButton"
       onmouseover="buttonHover('homeButton', 'homeButtonImage')"
       onmouseout="buttonUnhover('homeButton', 'homeButtonImage')"
+      onclick="window.location.href='./index.html'"
     >
       <img src="./img/Home.png" id="homeButtonImage" />
     </button>
@@ -60,10 +61,10 @@
           onmouseout="buttonUnhover('applicationsLi')"
           onclick="window.location.href = './applications.html'"
           id="applicationsLi"
-        >Examples & Guidance</li>
+        >Examples &#38; Guidance</li>
       </ul>
     </div>
-  </nav>
+  </header>
 
   <main>
     <!-- Holds HTML, CSS, & JS logo -->
@@ -71,6 +72,24 @@
       <img src="./img/HtmlLogo.svg" />
       <img src="./img/CssLogo.svg" />
       <img src="./img/JsLogo.svg" />
+    </section>
+
+    <p id="italicizedHeader">A resource for learning all about HTML, CSS, &#38; JS!</p>
+
+    <!-- Why learn web development -->
+    <section id="aboutWebDevelopment">
+      <img src="./img/Code.png" />
+      <p>Almost everything that runs on your computer is interconnected to the web. Learning how to interface with the World Wide Web is possibly one of the most important skills/services in this modern day economy. HTML &#38; JS especially is, personally speaking, the most versatile languages. Leaving you with one of the best quotes in programming, Jeff Atwood once said: "Any application that can be written in Javascript, will eventually be written in Javascript".</p>
+    </section>
+
+    <!-- Citation -->
+    <section id="citation">
+      <p>Citation</p>
+      <div>
+        <a href="https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">HTML Logo</a>
+        <a href="https://en.wikipedia.org/wiki/CSS#/media/File:CSS3_logo_and_wordmark.svg">CSS Logo</a>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Javascript-shield.svg">JS Logo</a>
+      </div>
     </section>
   </main>
 </body>
