--- a/index.html
+++ b/index.html
@@ -74,21 +74,38 @@
       <img src="./img/JsLogo.svg" />
     </section>
 
-    <p id="italicizedHeader">A resource for learning all about HTML, CSS, &#38; JS!</p>
+    <p class="italicizedHeader">A resource for learning all about HTML, CSS, &#38; JS!</p>
 
     <!-- Why learn web development -->
-    <section id="aboutWebDevelopment">
+    <section class="infoBox">
       <img src="./img/Code.png" />
-      <p>Almost everything that runs on your computer is interconnected to the web. Learning how to interface with the World Wide Web is possibly one of the most important skills/services in this modern day economy. HTML &#38; JS especially is, personally speaking, the most versatile languages. Leaving you with one of the best quotes in programming, Jeff Atwood once said: "Any application that can be written in Javascript, will eventually be written in Javascript".</p>
+      <div>
+        <h2 style="padding-bottom: 0px;">Why learn web development?</h2>
+        <p>Almost everything that runs on your computer is interconnected to the web. Learning how to interface with the World Wide Web is possibly one of the most important skills/services in this modern day economy. HTML &#38; JS especially is, personally speaking, the most versatile languages. Leaving you with one of the best quotes in programming, Jeff Atwood once said: "Any application that can be written in Javascript, will eventually be written in Javascript".</p>
+      </div>
+    </section>
+
+    <!-- What is HTML/CSS/JS -->
+    <section class="infoBox">
+      <div>
+        <h2>What is HTML, CSS, and JS?</h2>
+        <ul style="width: 500px;">
+          <li>HTML: HyperText Markup Language is a pseudo-prorgamming-language to create pages to be displayed in a web browser. Out of the 3 languages HTML, CSS, and JS, HTML is the architect</li>
+          <li>CSS: Cascading Style Sheets is a pseudo-programming-language to be used in tandem with HTML. CSS is the artist of the 3 languages</li>
+          <li>JS: Javascript is a programming language that may be used in tandem with HTML &#38; CSS, but may also be used on it's own (can be run with anything with the JavaScript engine). Javascript is the wizard of the 3 languages</li>
+        </ul>
+      </div>
+      <img src="./img/Computer.png" />
     </section>
 
     <!-- Citation -->
     <section id="citation">
       <p>Citation</p>
       <div>
-        <a href="https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">HTML Logo</a>
-        <a href="https://en.wikipedia.org/wiki/CSS#/media/File:CSS3_logo_and_wordmark.svg">CSS Logo</a>
-        <a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Javascript-shield.svg">JS Logo</a>
+        <a href="https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">1</a>
+        <a href="https://en.wikipedia.org/wiki/CSS#/media/File:CSS3_logo_and_wordmark.svg">2</a>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Javascript-shield.svg">3</a>
+        <a href="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/83/e258e0532611e5a5072321239ff4d4/jhep-coursera-course4.png?auto=format%2Ccompress&dpr=1&w=330&h=330&fit=fill&q=25">4</a>
       </div>
     </section>
   </main>
